# tennis_sql

./: .gitignore  .test.env  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: constants.py  data_cleaning.py  data_formatting.py  data_ingestion.py  data_scraping.py  logger.py  main.py  workers.py
src/data/: data_cleaning.py  data_formatting.py  data_scraping.py
src/data_scraping/: data_scraping.py
src/db/: db.py  models.py  schemas.py  tables.py
src/db/models/: game.py  performance.py  player.py
src/db/models/orm/: base.py  game.py  github.py  performance.py  player.py  tournament.py
src/db/models/pydantic/: base.py  game.py  github.py  performance.py  player.py  tournament.py
src/db/schema/: base.py  game.py  github.py  performance.py  player.py  tournament.py
src/db_models/: game.py  performance.py  player.py  tournament.py
src/settings/: db.py  redis.py
tests/: conftest.py  test_data_cleaning.py  test_data_formatting.py  test_data_ingestion.py  test_data_scraping.py  test_main.py  test_workers.py
tests/data/: test_data_cleaning.py  test_data_formatting.py  test_data_scraping.py
tests/data_scarping/: test_data_scraping.py
tests/db/: test_db.py
tests/db/models/: test_db_models.py  test_pydantic.py
tests/db/schema/: test_db_schema.py
tests/db_models/: test_db_models.py
